# rust-opengl

./: Cargo.toml  LICENSE
lib/gl/: Cargo.toml
src/: main.rs  render_gl.rs  resources.rs
src/render_gl/: data.rs
