[package]
name = "whatever"
version = "0.1.0"
authors = ["croaton <dmytro.shervarly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gl_debug = ["gl/debug"]

[build-dependencies]
walkdir = "2.1"

[dependencies]
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }