[package]
name = "gl"
version = "0.1.0"
authors = ["croaton <dmytro.shervarly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gl_generator = { version = "0.9.0" }

[features]
debug = []

[dependencies]
